@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.altamiracorp.reddawn</groupId>
     <artifactId>reddawn</artifactId>
@@ -13,9 +12,12 @@
     <modules>
         <module>core</module>
         <module>web</module>
+        <module>messaging</module>
         <module>web-framework</module>
         <module>model</module>
         <module>model-accumulo</module>
+        <module>dictionary-seed</module>
+        <module>crawler</module>
     </modules>
 
     <repositories>
@@ -25,26 +27,38 @@
         </repository>
 		<repository>
 			<id>red-dawn-releases</id>
-			<url>http://nic-mvnproxy:8080/artifactory/libs-release/</url>
+			<url>http://nic-mvnproxy.nearinfinity.com:8080/artifactory/libs-release-local/</url>
 		</repository>
 		<repository>
 			<snapshots>
 				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
+				<updatePolicy>always</updatePolicy>
 				<checksumPolicy>fail</checksumPolicy>
 			</snapshots>
 			<id>red-dawn-snapshots</id>
-			<url>http://nic-mvnproxy:8080/artifactory/libs-release/</url>
+			<url>http://nic-mvnproxy.nearinfinity.com:8080/artifactory/libs-snapshot-local/</url>
 		</repository>
     </repositories>
 
 	<properties>
-		<blur-version>0.1.5</blur-version>
+		<blur-version>0.2.0-incubating-SNAPSHOT</blur-version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<accumulo-version>1.4.3</accumulo-version>
 		<hadoop-version>0.20.2-cdh3u6</hadoop-version>
 		<zookeeper-version>3.3.5</zookeeper-version>
 		<jetty-version>8.1.11.v20130520</jetty-version>
+        <site.config.location>conf/maven/site</site.config.location>
+        <javadoc.stylesheetfile>conf/maven/javadoc/stylesheet.css</javadoc.stylesheetfile>
+        <maven.build.timestamp.format>EEE MMM dd HH:mm z yyyy</maven.build.timestamp.format>
 	</properties>
+
+    <distributionManagement>
+        <site>
+            <id>site-docs</id>
+            <url>file:///</url>
+        </site>
+    </distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
@@ -67,7 +81,13 @@
 					</exclusion>
 				</exclusions>
 	     	</dependency>
-		    <dependency>
+			<dependency>
+		        <groupId>org.apache.hadoop</groupId>
+		        <artifactId>hadoop-client</artifactId>
+		        <version>${hadoop-version}</version>
+		    </dependency>
+		    <!--
+			<dependency>
 		        <groupId>org.apache.hadoop</groupId>
 		        <artifactId>hadoop-core</artifactId>
 		        <version>${hadoop-version}</version>
@@ -84,8 +104,25 @@
 						<groupId>javax.servlet</groupId>
 						<artifactId>servlet-api</artifactId>
 					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-server</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-json</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-core</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.codehaus.jackson</groupId>
+						<artifactId>jackson-core-asl</artifactId>
+					</exclusion>
 				</exclusions>
 		    </dependency>
+			-->
 		    <dependency>
 		      <groupId>org.json</groupId>
 		      <artifactId>json</artifactId>
@@ -134,7 +171,91 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.doxia</groupId>
+                        <artifactId>doxia-module-markdown</artifactId>
+                        <version>1.3</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <siteDirectory>${user.dir}/${site.config.location}</siteDirectory>
+                    <attach>true</attach>
+                    <relativizeDecorationLinks>false</relativizeDecorationLinks>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.7</version>
+                            <reports>
+                                <report>index</report>
+                                <report>summary</report>
+                                <report>license</report>
+                                <report>scm</report>
+                                <report>issue-tracking</report>
+                                <report>dependencies</report>
+                                <report>dependency-management</report>
+                                <report>plugins</report>
+                                <report>plugin-management</report>
+                            </reports>
+                            <configuration>
+                                <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.9</version>
+                            <configuration>
+                                <stylesheetfile>${user.dir}/${javadoc.stylesheetfile}</stylesheetfile>
+                                <show>package</show>
+                                <failOnError>false</failOnError>
+                                <quiet>true</quiet>
+                                <footer>Generated ${maven.build.timestamp}</footer>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jxr-plugin</artifactId>
+                            <version>2.3</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-report-plugin</artifactId>
+                            <version>2.14.1</version>
+                            <configuration>
+                                <linkXRef>true</linkXRef>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>2.5.2</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <version>2.5.2</version>
+                            <configuration>
+                                <xmlOutput>true</xmlOutput>
+                                <argLine>-Xmx256m</argLine>
+                                <argLine>-XX:MaxPermSize=256m</argLine>
+                            </configuration>
+                        </plugin>
+                    </reportPlugins>
+                    <port>9000</port>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
         </plugins>
     </build>
-
 </project>
